nade/tests/compile_fail/01_not_find_function_error.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `bar`
  --> $DIR/01_not_find_function_error.rs:5:12
   |
5  |     pub fn bar() -> usize {
   |            ^^^ use of undeclared crate or module `bar`
...
11 |     assert_eq!(foo::bar!(), 1);
   |                ----------- in this macro invocation
   |
   = note: this error originates in the macro `foo::bar` (in Nightly builds, run with -Z macro-backtrace for more info)
